# training-raft

./: .gitignore  CMakeLists.txt  README.md  clang-10.conan-profile.example  conanfile.txt
src/: asio_with_aliases.h  condition_awaiter.h  custom_awaitable.h  fastest_awaitable.h  forward_call.h  group_await.h  group_conditioned_await.h  join_awaitable.h  listener.cpp  listener.h  logging.h  main.cpp  node.h  test.cpp
test/: condition_awaiter_tests.cpp  forward_call_tests.cpp  join_awaitable_tests.cpp  test.cpp
